@@ -38,6 +38,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd-ldap chaining with onelevel scope (ITS#6699)
 	Fixed slapd-ldap chaining with ppolicy (ITS#6540)
 	Fixed slapd-ldap with SASL/EXTERNAL (ITS#6642)
+	Fixed slapd-ldif error strings (ITS#6731)
 	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
 	Fixed slapd-ndb hasSubordinates generation (ITS#6712)
 	Fixed slapd-meta anon retry with failed auth method (ITS#6643)
